Fixed unmount stuck with recusive method

--- a/CJMS-Interfaces/AudienceDisplay/src/assets/InfiniteTable.scss
+++ b/CJMS-Interfaces/AudienceDisplay/src/assets/InfiniteTable.scss
@@ -1,34 +1,69 @@
-// table {
-//   font-family: arial, sans-serif;
-//   border-collapse: collapse;
-//   width: 100%;
-// }
-
-// td, th {
-//   border: 1px solid #dddddd;
-//   text-align: left;
-//   // padding: 8px;
-// }
-
-// tr:nth-child(even) {
-//   background-color: #dddddd;
-// }
-
-.infinite-table td, .infinite-table th {
-  flex-basis: 10% !important;
-
-  &.large {
-    flex-basis: 80% !important;
-  }
-
-  &.ui.primary.basic {
-    box-shadow: 0px 0px 0px 0px white inset !important;
-    font-weight: bold !important;
-    text-align: center !important;
-    color: #1E5AA8 !important;
-  }
-
-  .minus.icon {
-    margin-right: 0 !important;
-  }
+*{
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
 }
+body{
+  font-family: Helvetica;
+  -webkit-font-smoothing: antialiased;
+  background: rgba( 71, 147, 227, 1);
+}
+h2{
+  text-align: center;
+  font-size: 18px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  color: white;
+  padding: 30px 0;
+}
+
+/* Table Styles */
+.table-wrapper{
+  margin: 10px 70px 70px;
+  box-shadow: 0px 35px 50px rgba( 0, 0, 0, 0.2 );
+}
+
+.fl-table {
+  border-radius: 5px;
+  font-size: 12px;
+  font-weight: normal;
+  border: none;
+  border-collapse: collapse;
+  width: 100%;
+  max-width: 100%;
+  white-space: nowrap;
+  background-color: white;
+}
+
+.fl-table td, .fl-table th {
+  text-align: center;
+  padding: 8px;
+}
+
+.fl-table td {
+  border-right: 1px solid #f8f8f8;
+  font-size: 12px;
+}
+
+.fl-table thead th {
+  color: #ffffff;
+  background: #4FC3A1;
+  position: sticky;
+  top: 0;
+  z-index: 1;
+}
+
+
+.fl-table thead th:nth-child(odd) {
+  color: #ffffff;
+  background: #324960;
+}
+
+.fl-table tr:nth-child(even) {
+  background: #F8F8F8;
+}
+
+// .column {
+//   // background: transparent;
+//   z-index: -1;
+// }
